[gd_scene load_steps=5 format=2]

[ext_resource path="res://app/scenes/splash_screen/splash_logo_part_1.png" type="Texture" id=1]
[ext_resource path="res://app/scenes/splash_screen/splash_logo_part_2.png" type="Texture" id=2]
[ext_resource path="res://app/scenes/splash_screen/logo_splash.gd" type="Script" id=3]
[ext_resource path="res://app/scenes/splash_screen/suffragium_logo.wav" type="AudioStream" id=4]

[node name="LogoSplash" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SplashLogo" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -614.0
margin_top = -113.0
margin_right = 614.0
margin_bottom = 113.0
rect_min_size = Vector2( 1228, 226 )
rect_pivot_offset = Vector2( 614, 113 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Part2" type="TextureRect" parent="SplashLogo"]
margin_left = -347.0
margin_right = 727.0
margin_bottom = 226.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Part1" type="TextureRect" parent="SplashLogo"]
margin_left = -347.0
margin_right = 727.0
margin_bottom = 226.0
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="SplashLogo"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="SplashLogo"]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="Overlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
